add activity and apply buttons

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Target Project</string>
     <string name="target">Цель:</string>
     <string name="setTarget">Чтобы достичь цель, нужно ее задать.</string>
+    <string name="add_target">Поставь новую цель:</string>
 </resources>
