--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -4,4 +4,5 @@
     <string name="target">Цель:</string>
     <string name="setTarget">Чтобы достичь цель, нужно ее задать.</string>
     <string name="add_target">Поставь новую цель:</string>
+    <string name="NoTarget">Нет цели</string>
 </resources>
